--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,6 @@
-@import "@/assets/styles/_variables.scss";
-@import "@/assets/styles/_reset.scss";
-// @import "element-plus/theme-chalk/dark/css-vars";
+@import '@/assets/styles/_variables.scss';
+@import '@/assets/styles/_reset.scss';
+@import 'element-plus/theme-chalk/dark/css-vars';
 
 body {
   color: var(--text-color);
